# adventofcode

./: .gitignore  README.md  commons.py  pyproject.toml
2023/day_1/star_2/: algo.py  test_algo.py
year_2023/day_1/star_1/: algo.py  test_algo.py
year_2023/day_1/star_2/: algo.py
year_2023/day_18/star_1_00_pygame_failure/: algo.py  test_algo.py
year_2023/day_18/star_1_01_pillow/: algo.py
year_2023/day_2/star_1/: algo.py  test_algo.py
year_2023/day_2/star_2/: algo.py  test_algo.py
year_2023/day_20/star_1/: algo.py  doc.txt  test_algo.py
year_2023/day_3/star_1/: algo.py  test_algo.py
year_2023/day_3/star_2/: algo.py  test_algo.py
year_2023/day_4/star_1/: algo.py  test_algo.py
year_2023/day_4/star_2/: algo.py  test_algo.py
year_2023/day_5/star_1/: algo.py  test_algo.py
year_2023/day_5/star_2_01_slow/: algo.py
year_2023/day_5/star_2_02_cache_slower/: algo.py
year_2023/day_5/star_2_03_ok/: algo.py  test_algo.py
year_2023/day_6/star_1/: algo.py  test_algo.py
year_2023/day_6/star_2/: algo.py  test_algo.py
