[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["cdar <cdar07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
black = "^23.11.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
